--- a/mybatis1/pom.xml
+++ b/mybatis1/pom.xml
@@ -7,7 +7,21 @@
     <groupId>com.ywy</groupId>
     <artifactId>mybatis1</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.xml</include>
+            </includes>
+            <filtering>false</filtering>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -29,6 +43,11 @@
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>3.7.2</version>
         </dependency>
     </dependencies>
 </project>
