--- a/mybatis1/pom.xml
+++ b/mybatis1/pom.xml
@@ -46,9 +46,14 @@
             <version>8.0.33</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -64,7 +69,7 @@
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>3.7.2</version>
+            <version>4.2.1</version>
         </dependency>
         <!--连数据得单独装jdbc 否则spring-context默认不会下载jdbc相关包-->
         <dependency>
