--- a/mybatis1/pom.xml
+++ b/mybatis1/pom.xml
@@ -98,5 +98,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.6</version>
         </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.4.3</version>
+        </dependency>
     </dependencies>
 </project>
